# refactored-spork

./: .gitignore  CMakeLists.txt  README.md  run.sh  run_naive.sh  run_release.sh
insight_testsuite/: run_tests.sh
insight_testsuite/tests/test-2-ladder/venmo_input/: venmo-trans.txt
insight_testsuite/tests/test-2-ladder/venmo_output/: output.txt
insight_testsuite/tests/test-given-example/venmo_input/: venmo-trans.txt
insight_testsuite/tests/test-invalid-input/venmo_input/: venmo-trans.txt
insight_testsuite/tests/test-kk-blab/venmo_input/: venmo-trans.txt
insight_testsuite/tests/test-kk-blab/venmo_output/: output.txt
insight_testsuite/tests/test-kk-blab2/venmo_input/: venmo-trans.txt
insight_testsuite/tests/test-kk-blab2/venmo_output/: output.txt
my_tests/: initial.txt
src/: median_degree_engine.cpp  naive_exploration.cpp  naive_solution.cpp
venmo_input/: venmo-trans.txt
